refactor teams endpoints
